--- a/form.html
+++ b/form.html
@@ -460,16 +460,16 @@
 			}
 
 			document.getElementById("submit-form").addEventListener("click", function () {
-			    var contestInput = document.getElementById("contest1_name-selection"),
-			        firstNameInput = document.getElementById("first_name"),
-			        lastNameInput = document.getElementById("last_name"),
-			        countryInput = document.getElementById("country-selection"),
-			        emailInput = document.getElementById("email"),
-			        birthDayInput = document.getElementById("birth_day"),
-			        birthMonthInput = document.getElementById("birth_month"),
-			        birthYearInput = document.getElementById("birth_year"),
+			    var contestInput        = document.getElementById("contest1_name-selection"),
+			        firstNameInput      = document.getElementById("first_name"),
+			        lastNameInput       = document.getElementById("last_name"),
+			        countryInput        = document.getElementById("country-selection"),
+			        emailInput          = document.getElementById("email"),
+			        birthDayInput       = document.getElementById("birth_day"),
+			        birthMonthInput     = document.getElementById("birth_month"),
+			        birthYearInput      = document.getElementById("birth_year"),
 			        instructionListItem = document.createElement("li"),
-			        age = calculateAge(birthDayInput.value, birthMonthInput.value, birthYearInput.value);
+			        age                 = calculateAge(birthDayInput.value, birthMonthInput.value, birthYearInput.value);
 			    
 			    document.getElementById('instruction-list').appendChild(instructionListItem);
 
@@ -508,25 +508,35 @@
 			        }
 			    };
 
-			    for (var validations in validationErrors) {
-			    	var validation = validationErrors[validations],
-			    	    validationError = validation[Object.keys(validation)[0]],
-			    	    errorMessage = validation[Object.keys(validation)[1]];
 
-			    	if (validationError == true){
-			    		console.log(errorMessage);
-			    		var instruction = document.createTextNode(errorMessage);
-			    		instructionListItem.appendChild(instruction);
+			    function checkValidations(){
+			    	var result = true;
+
+			    	for (var validations in validationErrors) {
+			    		var validation      = validationErrors[validations],
+			    		    validationError = validation[Object.keys(validation)[0]],
+			    		    errorMessage    = validation[Object.keys(validation)[1]];
+
+			    		if (validationError == true){
+	    		    	console.log(errorMessage);
+	    		    	result = false
+	    		    	var instruction = document.createTextNode(errorMessage);
+	    		    	instructionListItem.appendChild(instruction);
+			    		}
 			    	}
-					}
-
-			    if (contestInput.value && firstNameInput.value && lastNameInput.value && countryInput.value && (age >= 14) && this.form.privacy_check.checked && validateEmail(emailInput.value)){
-			        console.log("music style and first name and last name and country selected and over 14 and privacy checked")
-			        form.submit();     
-			        console.log("Form Submited");
+			    	return result;
 			    }
+
+	    		function checkResult(){
+	    			if (checkValidations()){
+	    				form.submit();     
+	    				console.log("Form Submited");
+	    			};
+	    		}
+
+				  checkResult();
 			})
-})
+		})
 	</script>
 
 </body>
