--- a/form.html
+++ b/form.html
@@ -4,12 +4,12 @@
 	<title>Sign Up Form</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<style type="text/css">
-		h1{ text-align: center; margin-bottom: 60px };
+		h1{ margin-bottom: 60px };
 	</style>
 </head>
 <body>
 
-	<h1>Sign Up</h1>
+	<h1 class="text-center">Sign Up</h1>
 
 	<form id="sign-up-form" class="col-xs-12 col-sm-10 col-sm offset-1 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
 
@@ -444,7 +444,7 @@
 				<option value="1914">1914</option>
 			</select>
 		</div>
-		<div id="checkbox-conditions" class="checkbox row">
+		<div id="checkbox-conditions" class="checkbox row col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3">
 			<input type="checkbox" name="privacy_check" class="col-xs-3 col-xs-offset-1 col-sm-3 col-sm-offset-1 col-md-2 col-md-offset-2 col-lg-2 col-lg-offset-2" required/>
 			<label for="privacy_check" class="col-xs-8 col-sm-8 col-md-8 col-lg-8">I have read and understood the Terms and Conditions.</label>
 		</div>
